# extended_r-index

./: CMakeLists.txt  IOfunc.hpp  README.md  ext_r-index.py  genpattern.cpp  main.cpp  makefile  pred_ebwt.hpp  r_index.hpp  rle_ebwt.hpp  sd_vector.hpp  test_er_index.py
CMakeModules/: ConfigureCompilerGcc.cmake
data/: test.fasta
pfpebwt/: circpfp.cpp  common.hpp  csais.cpp  ebwt.cpp  parse.cpp  parse.hpp  pfp.hpp  pfp_parse.hpp  pfp_ssa.hpp  utils.h
toydata/: patterns.fasta
